--- a/client/index.html
+++ b/client/index.html
@@ -16,6 +16,7 @@
     <div id="main">
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
+      <textarea id="output"></textarea>
     </div>
   </body>
 </html>
