Implemented most chat room functions.

--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
     <!-- dependencies -->
     <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
     <!-- your scripts -->
     <script src="scripts/config.js"></script>
     <script src="scripts/app.js"></script>
@@ -15,8 +16,8 @@
   <body>
     <div id="main">
       <h1>chatterbox</h1>
-      <!-- Your HTML goes here! -->
-      <textarea id="output"></textarea>
+      <div id="roomSelect"></div>
+      <div id="chats"></div>
     </div>
   </body>
 </html>
