--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -20,6 +20,8 @@
 
   <!-- Source files -->
   <script src="client/scripts/app.js"></script>
+  <script src="scripts/config.js"></script>
+
 
 </head>
 <body>
