Implemented click handling on usernames

--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,12 @@
   <body>
     <div id="main">
       <h1>chatterbox</h1>
-      <div id="roomSelect"></div>
-      <div id="chats"></div>
+      <div id="header">
+        <div id="roomSelect">Rooms:</div>
+        <div id="message">Message</div>
+        <div id="send"></div>
+      </div>
+      <div id="chats">Chats:</div>
     </div>
   </body>
 </html>
