All specs pass now.

--- a/client/index.html
+++ b/client/index.html
@@ -18,8 +18,12 @@
       <h1>chatterbox</h1>
       <div id="header">
         <div id="roomSelect">Rooms:</div>
-        <div id="message">Message</div>
-        <div id="send"></div>
+        <div id="send">
+          <form id="inputBox">
+            <input type="text">
+            <input type="submit">
+          </form>
+        </div>
       </div>
       <div id="chats">Chats:</div>
     </div>
