Partially implemented showing of tweets with d3.

--- a/client/index.html
+++ b/client/index.html
@@ -18,14 +18,20 @@
       <h1>chatterbox</h1>
       <div id="header">
         <div id="roomSelect">Rooms:</div>
-        <div id="send">
-          <form id="inputBox">
-            <input type="text">
-            <input type="submit">
-          </form>
+        <div>
+            <input type="text" id="inputBox" autofocus >
+            <button id="button">Submit</button>
         </div>
       </div>
       <div id="chats">Chats:</div>
     </div>
   </body>
+
+  <script>
+
+
+  </script>
 </html>
+
+<!-- d3.select('#chats').selectAll('div').data(app.tweets).enter().append('div').text(function(d){return d.text;})
+ -->
