Improved lobby selector.

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,9 @@
             <input type="text" id="inputBox" autofocus >
             <button id="button">Submit</button>
         </div>
+        <div>
+          <select id="roomSelector"></select>
+        </div>
       </div>
       <div id="chats">Chats:</div>
     </div>
